# domaindriven

./: .drone.yml  .env-dist  .gitignore  README.md  docker-compose.yaml  package-lock.json  package.json  turbo.json
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: docker.yml  publish-containers.yml
apps/funcs/: .gitignore  Dockerfile  README.md  package.json  pyproject.toml
apps/funcs/app/: admin_add_user_to_space.py  audit.py  backup.py  copy_model.py  file.py  main.py
apps/funcs/app/routes/: clone.py  model_changed.py  new_space.py  new_user.py  remove_model_viewers.py  restore.py
apps/funcs/graphql/: add_term_to_group.graphql  add_user_to_space.graphql  create_connection.graphql  create_demoted.graphql  create_group.graphql  create_new_context.graphql  create_new_model.graphql  create_personal_space.graphql  create_relation.graphql  create_term.graphql  export_model.graphql  get_backup.graphql  get_context_model_id.graphql  get_group_context_id.graphql  get_model_space_id.graphql  log_audit_event.graphql  remove_model_viewers.graphql  save_backup.graphql  set_user_personal_space.graphql  update_model_timestamp.graphql  update_space_timestamp.graphql
apps/proxy/: .env-dist  Caddyfile  README.md  prod.Caddyfile
apps/web/: .gitignore  Caddyfile  Dockerfile  build.js  cypress.config.js  package.json  plantuml-cors-proxy.js
hasura/: config.yaml  seed.sh
hasura/metadata/: actions.graphql  actions.yaml  cron_triggers.yaml  inherited_roles.yaml
public/: site.webmanifest
src/: auth.js  errors.js  model_viewers.js
(+258 files in other folders)
